--- a/src/component/navbar/style/main.scss
+++ b/src/component/navbar/style/main.scss
@@ -3,9 +3,396 @@
 #nav-bar {
   color: $fontColor;
   border-bottom: 1px solid #BBBBBB;
+  padding: 10px;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
 
   .web-logo {
-  // html 的热更新。
+    display: flex;
+    height: 75px;
+    width: 155px;
+    align-items: center;
+    font-weight: bold;
+    font-size: 16px;
+    cursor: pointer;
+
+    &:hover {
+      .logo {
+        box-shadow: 0 0 10px 1px $themeColor;
+      }
+      .keyword {
+        color: $themeColor;
+        transform: scale(1.5);
+      }
+    }
+
+    .keyword {
+      transform-origin: right;
+      transition: color .5s, transform .5s;
+    }
+
+    .logo {
+      margin-right: 20px;
+      height: 100%;
+      border-radius: 50%;
+      object-fit: contain;
+      object-position: center;
+      transition: box-shadow .5s;
+      border: 1px solid $themeColor;
+    }
+  }
+
+  .underline {
+    cursor: pointer;
+    position: relative;
+
+    &::before {
+      content: '';
+      display: block;
+      position: absolute;
+      width: 0;
+      height: 100%;
+      right: 50%;
+      top: 0;
+      border-bottom: 2px solid #101010;
+      transition: width .5s;
+    }
+
+    &::after {
+      content: '';
+      display: block;
+      position: absolute;
+      width: 0;
+      height: 100%;
+      left: 50%;
+      top: 0;
+      border-bottom: 2px solid #101010;
+      transition: width .5s;
+    }
+
+    &:hover::before {
+      width: 50%;
+    }
+
+    &:hover::after {
+      width: 50%;
+    }
+
+  }
+
+  .search {
+    height: 30px;
+    border: 1px solid #BBBBBB;
+    border-radius: 30px;
+    width: 280px;
+    position: relative;
+
+    .options {
+      position: absolute;
+      left: 0;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      width: 60px;
+      height: 100%;
+      cursor: pointer;
+
+      .choice {
+        font-size: 10px;
+        margin-right: 2px;
+        user-select: none;
+      }
+
+      .icon {
+        height: 15px;
+        transition: transform .5s;
+        transform: rotate(180deg);
+      }
+
+      .option-list {
+        position: absolute;
+        width: 40px;
+        height: 0;
+        background-color: #FDF6E6;
+        top: 29px;
+        transition: height .5s;
+        overflow: hidden;
+        border: 1px solid $themeColor;
+        border-top: none;
+
+        .option {
+          padding: 3px;
+          width: 41px;
+          height: 20px;
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          user-select: none;
+          font-size: 10px;
+          color: $themeColor;
+          transition: color .5s, background-color .5s;
+          font-weight: bold;
+
+          &:not(:last-child) {
+            border-bottom: 1px solid;
+          }
+
+          &:hover {
+            color: white;
+            background-color: $themeColor;
+          }
+
+        }
+
+      }
+
+      &.open-list {
+        .icon {
+          transform: rotate(0);
+        }
+        .option-list {
+          height: 60px;
+        }
+
+      }
+
+
+
+    }
+
+    .input {
+      all: unset;
+      position: absolute;
+      height: calc(100% + 1px);
+      width: 150px;
+      left: 60px;
+    }
+
+    .search-btn {
+      position: absolute;
+      top: -1px;
+      right: -1px;
+      background-color: $themeColor;
+      height: calc(100% + 2px);
+      width: 65px;
+      border-bottom-right-radius: 15px;
+      border-top-right-radius: 15px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      cursor: pointer;
+      transition: background-color .5s;
+
+      &:hover {
+        background-color: lighten($themeColor, 15%);
+      }
+
+      .icon {
+        width: 15px;
+        margin-right: 3px;
+      }
+
+      .tips {
+        color: #ffffff;
+        font-size: 13px;
+      }
+
+    }
+  }
+  .message {
+    width: 30px;
+    height: 30px;
+    position: relative;
+    cursor: pointer;
+
+    .icon {
+      fill: #898585;
+      width: 25px;
+    }
+
+    &.active::after {
+      content: '';
+      border-radius: 50%;
+      width: 8px;
+      height: 8px;
+      position: absolute;
+      background-color: red;
+      top: 0;
+      right: 5px;
+    }
+
+    &:hover {
+      animation: shake 1s;
+      transform-origin: top;
+    }
+
+    @keyframes shake {
+      0% {
+        transform: rotate(0) scale(1);
+      }
+      25% {
+        transform: rotate(-30deg) scale(1.4);
+      }
+      75% {
+        transform: rotate(30deg) scale(1.4);
+      }
+      100% {
+        transform: rotate(0) scale(1);
+      }
+    }
+
+  }
+
+  .avatar {
+    position: relative;
+
+    .image {
+      border-radius: 50%;
+      width: 75px;
+      height: 75px;
+      cursor: pointer;
+      transition: transform .5s, box-shadow .5s;
+      transform-origin: top;
+      object-fit: cover;
+      position: relative;
+      z-index: 1;
+    }
+
+    .panel {
+      opacity: 0;
+      visibility: hidden;
+      position: absolute;
+      width: 150px;
+      height: 175px;
+      border-radius: 10px;
+      border: 2px solid $themeColor;
+      transition: visibility .5s, opacity .5s, transform .5s;
+      left: 50%;
+      transform: translate(-50%, 20px);
+      background-color: #FDF6E6;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      padding-top: 20px;
+
+      .stu-name {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        margin-bottom: 5px;
+
+        img {
+          width: 20px;
+        }
+
+        span {
+          margin-left: 5px;
+          font-size: 12px;
+          font-weight: bold;
+        }
+
+      }
+
+      .stu-id {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        margin-bottom: 5px;
+        img {
+          width: 20px;
+        }
+        span {
+          margin-left: 5px;
+          font-size: 12px;
+          font-weight: bold;
+        }
+      }
+
+      .btn-group {
+        .btn {
+          cursor: pointer;
+          color: white;
+          background-color: $themeColor;
+          padding: 5px;
+          display: inline-block;
+          font-size: 10px;
+          border-radius: 5px;
+          transition: background-color .5s;
+          &:hover {
+            background-color: lighten($themeColor, 15%);
+          }
+        }
+        margin-bottom: 8px;
+      }
+
+      .his-record {
+        width: 120px;
+        border: 1px solid $themeColor;
+        height: 60px;
+        border-radius: 5px;
+        padding: 5px;
+
+        .last-watch {
+          margin-bottom: 5px;
+          img {
+            width: 20px;
+          }
+
+          width: 100%;
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          font-size: 8px;
+
+          span {
+            overflow: hidden;
+            text-overflow: ellipsis;
+            white-space: nowrap;
+          }
+        }
+
+        .his-btn-group {
+          display: flex;
+          justify-content: space-around;
+          align-items: center;
+
+          .btn {
+            cursor: pointer;
+            color: white;
+            background-color: $themeColor;
+            padding: 3px;
+            display: inline-block;
+            font-size: 10px;
+            border-radius: 5px;
+            transition: background-color .5s;
+            &:hover {
+              background-color: lighten($themeColor, 15%);
+            }
+          }
+
+        }
+
+      }
+
+
+
+    }
+
+    &:hover {
+      .image {
+        box-shadow: 0 0 10px 3px $themeColor;
+        transform: scale(1.2);
+      }
+      .panel {
+        opacity: 1;
+        visibility: visible;
+        transform: translate(-50%, 0);
+      }
+    }
+
+
+
 
 
   }
