--- a/src/component/navbar/style/main.scss
+++ b/src/component/navbar/style/main.scss
@@ -115,11 +115,14 @@
         width: 40px;
         height: 0;
         background-color: #FDF6E6;
-        top: 29px;
+        top: 24px;
         transition: height .5s;
         overflow: hidden;
-        border: 1px solid $themeColor;
         border-top: none;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
 
         .option {
           padding: 3px;
@@ -141,6 +144,11 @@
           &:hover {
             color: white;
             background-color: $themeColor;
+          }
+
+          &.active {
+            background-color: $themeColor;
+            color: white;
           }
 
         }
