--- a/src/common/style/base.scss
+++ b/src/common/style/base.scss
@@ -5,9 +5,13 @@ $fontColor: #101010;
   box-sizing: border-box;
 }
 
+* + * {
+  margin-top: 2.5em;
+}
+
 body {
   margin: 0;
-  min-width: 1000px;
+  min-width: 1200px;
   min-height: 800px;
 }
 
