补充了 HMR 的说明文档，实现了 HMR 的完全体。

--- a/src/page/index/style/main.scss
+++ b/src/page/index/style/main.scss
@@ -246,7 +246,7 @@
       .price {
         color: red;
         font-weight: 550;
-        margin-top: 0px;
+        margin-top: 0;
         float: right;
       }
 
