--- a/src/page/index/style/main.scss
+++ b/src/page/index/style/main.scss
@@ -48,9 +48,9 @@
       background-color: #fff;
       position: absolute;
       left: 2.5em;
-      border: 2px solid #BBBBBB;
+      border-left: 2px solid #BBBBBB;
+      border-bottom: 2px solid #BBBBBB;
       border-top: transparent;
-      width: 651px;
       height: 200px;
 
       .drop-class {
@@ -74,6 +74,8 @@
           color: #8F8E94;
         }
 
+
+
         .active {
           color: black;
           font-weight: bolder;
@@ -83,52 +85,6 @@
 
       }
 
-      .details {
-        margin-top: 0;
-        width: 510px;
-        float: left;
-        height: 100%;
-        display: flex;
-        align-content: flex-start;
-        flex-wrap: wrap;
-
-        .detail {
-          margin-top: 10px;
-          width: 100%;
-          height: 30px;
-          line-height: 30px;
-          display: flex;
-
-
-          .title {
-            margin-left: 20px;
-            margin-right: 0;
-            width: 120px;
-            font-size: 14px;
-            text-align: left;
-            border: transparent;
-            border-right: 2px solid #bfbfbf;
-          }
-
-          .course {
-            margin-left: 20px;
-            margin-top: 0;
-            font-size: 12px;
-            color: #8F8E94;
-            float: left;
-          }
-
-          .course::after {
-            content: " ";
-            border: transparent;
-            height: 30px;
-            line-height: 30px;
-            margin-left: 10px;
-            border-right: 2px solid #bfbfbf;
-          }
-
-        }
-      }
 
     }
 
@@ -142,7 +98,7 @@
       margin-top: 0px;
       position: absolute;
       top: 40px;
-      left: 20px;
+      right: 20px;
       height: 315px;
       width: 240px;
       opacity: 0.6;
