登录注册完成。

--- a/src/component/footer/index.html
+++ b/src/component/footer/index.html
@@ -7,11 +7,12 @@
 <body>
 <div id="footer">
   <div class="info">
-    <span>tieStudy是由中南大学软件工程专业宋铁老师发起的在线编程学习平台</span>
+    <span>TieStudy是由中南大学软件工程专业宋铁老师发起的在线编程学习平台</span>
     <a>关于我们</a>
     <a>联系我们</a>
     <a>加入我们</a>
     <a>帮助中心</a>
+    <div class="copyright">©2021-2022  铁哥工作室  版权所有</div>
   </div>
 </div>
 </body>
