--- a/src/page/course/style/main.scss
+++ b/src/page/course/style/main.scss
@@ -689,11 +689,13 @@
                 outline: none;
                 border: 1px #8F8E94 solid;
                 min-height: 100px;
-                width: 100%;
+                width: 190px;
                 height: auto;
                 word-break: break-all;
                 padding: 10px;
                 font-size: 14px;
+                position: relative;
+                left: 5px;
               }
 
               .commit-btn {
@@ -721,8 +723,8 @@
         }
 
         &:nth-child(3) {
-
           .panel-li-note {
+            height: 500px;
             background-color: #ffffff;
           }
 
@@ -730,6 +732,7 @@
 
         &:nth-child(4) {
           .panel-li-question {
+            height: 500px;
             background-color: #ffffff;
           }
         }
