--- a/src/page/index/style/main.scss
+++ b/src/page/index/style/main.scss
@@ -1,3 +1,4 @@
+@import "@/common/style/base.scss";
 
 .banner-box {
   margin-top: 1.5em;
@@ -151,6 +152,15 @@
       font-weight: 1000;
       margin-top: 1em;
       margin-right: 1em;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+
+      img {
+        margin-left: 5px;
+        width: 20px;
+      }
+
     }
   }
 
