--- a/src/page/video/style/main.scss
+++ b/src/page/video/style/main.scss
@@ -44,7 +44,8 @@ html {
     }
 
     .video-sidebar {
-      border-left: 1px solid #8F8E94;
+      border-left: 1px solid #000000;
+      box-shadow: 0 2px 12px 0 rgba(0, 0, 0, 0.1);
       height: 100%;
       width: 350px;
 
