--- a/src/page/cart/style/main.scss
+++ b/src/page/cart/style/main.scss
@@ -9,11 +9,11 @@ body {
     justify-content: center;
 
     .cart {
-      width: 1300px;
+      width: 50%;
       background-color: #FFFFFf;
 
       .cart-row {
-        width: 1300px;
+        width: 100%;
         background-color: rgb(248,248,248);
         display: flex;
         align-items: center;
