网络请求模块。

--- a/src/component/login/index.html
+++ b/src/component/login/index.html
@@ -21,7 +21,7 @@
         </div>
         <div class="login-option">
           <div class="login-free">
-            <input type="checkbox" id="is-login-free-in-stuID">
+            <input type="checkbox" id="is-login-free-in-stuID" checked>
             <label for="is-login-free-in-stuID">七天内免登录</label>
           </div>
           <a href="#">忘记密码</a>
