--- a/src/component/navbar/index.html
+++ b/src/component/navbar/index.html
@@ -24,7 +24,7 @@
         <svg viewBox="0 0 1024 1024" class="icon"><path d="M594.917 144.399c0-43.804-37.123-79.478-82.916-79.478-45.7 0-82.918 35.585-82.918 79.478 0 4.473 0.386 8.86 1.13 13.133-114.498 38.254-208.43 155.73-208.43 294.718v109.423s0 157.59-40.389 158.964c-24.082 0-42.528 17.792-42.528 39.74 0 22.1 18.557 39.738 41.452 39.738h663.366c23.005 0 41.451-17.791 41.451-39.737 0-22.104-18.557-39.741-41.45-39.741-41.466 0-41.466-157.854-41.466-157.854v-110.52c0-139.166-87.828-256.69-208.409-294.828a76.963 76.963 0 0 0 1.107-13.036z m41.46 695.39c-0.123 65.905-55.285 119.29-124.377 119.29-68.617 0-124.255-53.164-124.379-119.29h248.757z"></path></svg>
       </div>
       <div class="avatar">
-        <img class="image" src="<%= require('@/assets/img/navbar/avatar.jpg').default %>" alt="">
+        <img class="image" src="<%= require('@/assets/svg/navbar/user-avatar.svg').default %>" alt="">
         <div class="panel">
           <div class="brief-info">
             <div class="stu-name">
@@ -50,6 +50,7 @@
               <div class="btn">继续</div>
             </div>
           </div>
+          <div class="quit-btn">账户登出</div>
         </div>
       </div>
     </div>
