--- a/src/page/cart/style/main.scss
+++ b/src/page/cart/style/main.scss
@@ -98,6 +98,7 @@ body {
           font-weight: bold;
           width: 100px;
           background-color: rgb(0,77,153);
+          cursor: pointer;
         }
         .sum {
           float: right;
