--- a/src/page/video/style/main.scss
+++ b/src/page/video/style/main.scss
@@ -106,6 +106,8 @@ html {
       .directory-content {
         height: calc(100% - 50px);
         background-color: #fff;
+        overflow-x: hidden;
+        overflow-y: scroll;
 
         .chapter {
 
@@ -143,11 +145,18 @@ html {
           }
 
           .lesson {
+            all: unset;
             height: 40px;
             display: flex;
             align-items: center;
             font-size: 14px;
             color: rgb(153,155,156);
+            cursor: pointer;
+            transition: background-color .5s;
+
+            &:hover {
+              background-color: #c4c4c4;
+            }
 
             span {
               margin-left: 1em;
@@ -158,9 +167,20 @@ html {
               display: block;
               width: 20px;
               height: 20px;
-              border: 1px solid black;
+              border: 1px solid #8F8E94;
               background-color: #fff;
               border-radius: 90%;
+
+              &.full {
+                background-color: $themeColor;
+                border-color: $themeColor;
+              }
+
+              &.half-full {
+                background: linear-gradient(to right, transparent 0%, transparent 50%, $themeColor 51%, $themeColor 100%);
+                border-color: $themeColor;
+              }
+
             }
 
             .title {
