更改了一些 bug

--- a/src/page/course/style/main.scss
+++ b/src/page/course/style/main.scss
@@ -66,6 +66,7 @@
         position: relative;
         img {
           width: 350px;
+          height: 197px;
         }
         .course-state {
           position: absolute;
