--- a/src/page/cart/style/main.scss
+++ b/src/page/cart/style/main.scss
@@ -29,11 +29,11 @@ body {
         }
 
         .cover {
-          flex-basis: 10%;
+          flex-basis: 20%;
         }
 
         .name {
-          flex-basis: 30%;
+          flex-basis: 20%;
         }
 
         .date {
@@ -66,7 +66,7 @@ body {
       .empty-cart {
         font-size: 20px;
         height: 200px;
-        display: none;
+        display: flex;
         justify-content: center;
         align-items: center;
       }
@@ -75,10 +75,15 @@ body {
         overflow-y: auto;
         overflow-x: hidden;
 
+
       }
 
       .cart-item {
         height: 100px;
+        img {
+          height: 80px;
+          width: 60px;
+        }
       }
 
       .cart-footer {
