完善了用户模块和提醒信息

--- a/src/component/footer/style/main.scss
+++ b/src/component/footer/style/main.scss
@@ -6,6 +6,10 @@
   color: #fff;
   display: flex;
   justify-content: center;
+  position: absolute;
+  left: 0;
+  right: 0;
+  bottom: -220px;
 
   .info {
     width: 1152px;
