--- a/src/component/navbar/index.html
+++ b/src/component/navbar/index.html
@@ -29,11 +29,11 @@
           <div class="brief-info">
             <div class="stu-name">
               <img src="<%= require('@/assets/svg/navbar/stu-name.svg').default %>" alt="">
-              <span>王兴浩</span>
+              <span></span>
             </div>
             <div class="stu-id">
               <img src="<%= require('@/assets/svg/navbar/stu-id.svg').default %>" alt="">
-              <span>8209190414</span>
+              <span></span>
             </div>
           </div>
           <div class="btn-group">
