--- a/src/common/style/base.scss
+++ b/src/common/style/base.scss
@@ -9,6 +9,7 @@ $fontColor: #101010;
 body {
   margin: 0;
   min-width: 1100px;
-  min-height: 700px;
+  min-height: 100vh;
+  position: relative;
 }
 
