添加手机登录

--- a/src/component/login/index.html
+++ b/src/component/login/index.html
@@ -44,7 +44,7 @@
         </div>
         <div class="login-option">
           <div class="login-free">
-            <input type="checkbox" id="is-login-free-in-phoneNum">
+            <input type="checkbox" id="is-login-free-in-phoneNum" checked>
             <label for="is-login-free-in-phoneNum">七天内免登录</label>
           </div>
           <a href="#">忘记密码</a>
