完善手机登录

--- a/src/component/login/index.html
+++ b/src/component/login/index.html
@@ -32,12 +32,12 @@
       <label class="login-choice" for="phoneNum-login">手机登录</label>
       <div class="phoneNum-login-panel login-panel">
         <div class="enter-info-input-with-svg">
-          <input type="text" class="enter-info-input" placeholder="账户绑定的手机号">
+          <input type="text" class="enter-info-input" placeholder="账户绑定的手机号" value="15698429567">
           <svg viewBox="0 0 1024 1024"><path d="M797.328 80v864h-564V80h564m0-80h-564a80 80 0 0 0-80 80v864a80 80 0 0 0 80 80h564a80 80 0 0 0 80-80V80a80 80 0 0 0-80-80z"></path><path d="M182.336 708h666v80H182.336zM568 906h-105.328a40 40 0 1 1 0-80H568a40 40 0 1 1 0 80z"></path></svg>
         </div>
         <div class="enter-info-input-with-svg message-verification">
           <div class="enter-info-input-with-svg-container">
-            <input type="text" class="enter-info-input" placeholder="短信验证码" maxlength="6">
+            <input type="text" class="enter-info-input" placeholder="短信验证码（60s内有效）" maxlength="6">
             <svg viewBox="0 0 1024 1024"><path d="M934.4 160S697.6 134.4 531.2 6.4c-12.8-6.4-25.6-6.4-38.4 0C326.4 134.4 89.6 160 89.6 160c-12.8 0-25.6 12.8-25.6 25.6C64 192 64 358.4 115.2 544c32 108.8 76.8 204.8 128 275.2 70.4 96 166.4 160 262.4 198.4 102.4-32 198.4-102.4 262.4-198.4 51.2-76.8 96-166.4 128-275.2 64-185.6 64-345.6 64-358.4 0-12.8-12.8-25.6-25.6-25.6z m-204.8 243.2l-230.4 256c-6.4 6.4-12.8 12.8-25.6 12.8-6.4 0-19.2 0-25.6-6.4l-147.2-128c-19.2-19.2-19.2-38.4-6.4-51.2 6.4-12.8 19.2-12.8 25.6-12.8 6.4 0 19.2 0 19.2 6.4l121.6 108.8 211.2-224c12.8-12.8 32-19.2 51.2-6.4 6.4 6.4 12.8 12.8 12.8 25.6 0 0 0 12.8-6.4 19.2z"></path></svg>
           </div>
           <div class="get-message-btn-in-login active">获取验证码</div>
