--- a/src/component/footer/index.html
+++ b/src/component/footer/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>铁思汇</title>
+  <link rel="icon" href="<%= BASE_URL %>favicon.ico">
 </head>
 <body>
 <div id="footer">
