--- a/src/component/login/index.html
+++ b/src/component/login/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Title</title>
+  <title>铁思汇</title>
+  <link rel="icon" href="<%= BASE_URL %>favicon.ico">
 </head>
 <body>
 <div id="login">
