基本完成了待定的功能。

--- a/src/page/course/style/main.scss
+++ b/src/page/course/style/main.scss
@@ -261,6 +261,7 @@
           padding: 0;
 
           .panel-li-introduce {
+            width: 710px;
             padding: 20px;
             margin-right: 40px;
             background-color: #ffffff;
