--- a/src/component/navbar/style/main.scss
+++ b/src/component/navbar/style/main.scss
@@ -192,7 +192,7 @@
       object-fit: cover;
       position: relative;
       z-index: 1000;
-      background-color: #FFFFFf;
+      background-color: #ffffff;
 
       &.trueAvatar {
         padding: 0;
