--- a/src/page/cart/style/main.scss
+++ b/src/page/cart/style/main.scss
@@ -8,7 +8,7 @@ body {
 
     .cart {
       width: 50%;
-      background-color: #FFFFFf;
+      background-color: #ffffff;
 
       .cart-row {
         width: 100%;
@@ -97,7 +97,7 @@ body {
         }
         .check {
           float: right;
-          color: #FFFFFf;
+          color: #ffffff;
           font-weight: bold;
           width: 100px;
           background-color: rgb(0,77,153);
