--- a/src/page/index/style/main.scss
+++ b/src/page/index/style/main.scss
@@ -174,11 +174,17 @@
     flex-wrap: wrap;
 
     .round-box {
+      all: unset;
+      cursor: pointer;
       margin-top: 0.75em;
       border-radius: 5px;
-      background-color:crimson;
-      flex:auto;
+      flex: 1;
       height: 80px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      color: #ffffff;
+      font-weight: bold;
     }
 
     .round-box + .round-box {
@@ -194,7 +200,7 @@
 
         img {
           border-radius: 5px;
-          height: 100%;
+          height: 161px;
           width: 100%;
         }
 
