--- a/src/page/mycourse/style/main.scss
+++ b/src/page/mycourse/style/main.scss
@@ -31,7 +31,7 @@
         margin-top: 11px;
         text-align: center;
         float: left;
-        color: #FFFFFf;
+        color: #ffffff;
 
         div:first-child {
           font-size: 22px;
@@ -79,7 +79,7 @@
     #collection:not(:target) + #order:not(:target) ~ .main-content .course-content,
     #collection:target ~ .main-content .collection-content,
     #order:target ~ .main-content .order-content {
-      display: block;
+      display: flex;
     }
 
     .content-choice {
@@ -105,6 +105,10 @@
         padding-left: 10px;
         padding-right: 30px;
         color: rgb(98, 166, 232);
+        
+        & + img {
+          cursor: pointer;
+        }
 
         &::placeholder {
           color: #8B8D92;
@@ -122,14 +126,204 @@
     }
 
     .main-content {
-      margin-top: 30px;
+      margin-top: 40px;
+      position: relative;
 
-      .course-content {
-        display: none;
+      .show-group {
+        position: relative;
+        z-index: 2;
+
+        .radio {
+          position: absolute;
+          clip: rect(0, 0, 0, 0);
+
+          &:checked + label {
+            font-weight: bold;
+            color: $themeColor;
+
+            svg {
+              fill: $themeColor;
+            }
+
+          }
+
+        }
+
+        label {
+          cursor: pointer;
+          position: relative;
+        }
+
+        svg {
+          width: 20px;
+          position: absolute;
+          top: 50%;
+          transform: translateY(-50%);
+          right: 65px;
+        }
+
+        .simple-show {
+          position: absolute;
+          right: 100px;
+        }
+
+        .detailed-show {
+          position: absolute;
+          right: 0;
+        }
+
       }
 
-      .collection-content {
+      .collection-content, .course-content {
         display: none;
+        flex-direction: column;
+        align-items: center;
+
+        .exhibit-menu {
+          width: 100%;
+          position: relative;
+          height: 20px;
+
+          .radio {
+            position: absolute;
+            clip: rect(0, 0, 0, 0);
+
+            &:checked + label {
+              font-weight: bold;
+              color: $themeColor;
+            }
+
+          }
+
+          label {
+            cursor: pointer;
+            position: relative;
+          }
+
+          .sort-by-studied {
+            margin-right: 40px;
+          }
+
+        }
+
+        .course-content-ul {
+          text-align: justify;
+          margin-top: 20px;
+          width: 100%;
+          padding-left: 20px;
+          padding-right: 20px;
+          margin-bottom: -35px;
+
+          &.collection-content-ul {
+            margin-top: 40px;
+          }
+
+          .course-content-li {
+            display: inline-block;
+            text-align: center;
+            vertical-align: top;
+            padding-bottom: 20px;
+            width: 200px;
+
+            img {
+              width: 200px;
+              height: 125px;
+            }
+
+            .course-li-info {
+              padding-left: 10px;
+              padding-right: 10px;
+              width: 100%;
+              text-align: left;
+              display: flex;
+              flex-direction: column;
+              align-items: center;
+              justify-content: center;
+              position: relative;
+
+              .course-li-info-title {
+                position: relative;
+                font-weight: bold;
+                display: flex;
+                justify-content: center;
+                flex-direction: column;
+                align-items: center;
+
+                .isBuy {
+                  display: flex;
+                  position: relative;
+                  align-items: center;
+
+                  img {
+                    margin-left: 5px;
+                    width: 25px;
+                    height: 25px;
+                  }
+
+                }
+
+              }
+
+              .studied-or-operation {
+                text-align: center;
+                position: relative;
+
+                a, button {
+                  all: unset;
+                  margin-top: 5px;
+                  display: block;
+                  border: 1px $themeColor solid;
+                  border-radius: 30px;
+                  color: $themeColor;
+                  width: 150px;
+                  height: 30px;
+                  line-height: 30px;
+                  cursor: pointer;
+                }
+
+                .fake {
+                  margin-top: 30px;
+                  width: 200px;
+                  display: inline-block;
+                  border: 2px #8B8D92 solid;
+                  background-color: #8B8D92;
+                }
+
+                .real {
+                  position: absolute;
+                  left: 0;
+                  top: 30px;
+                  display: inline-block;
+                  border: 2px $themeColor solid;
+                  background-color: $themeColor;
+                }
+
+                .studied-tips {
+                  margin-top: 5px;
+                  color: $themeColor;
+                  a {
+                    all: unset;
+                    cursor: pointer;
+                  }
+                }
+              }
+
+            }
+
+          }
+
+          .fix-justify {
+            font-size: 0;
+
+            .course-content-li {
+              padding-bottom: 0;
+              width: 200px;
+            }
+
+          }
+
+        }
+
       }
 
       .order-content {
