--- a/src/page/payment/style/main.scss
+++ b/src/page/payment/style/main.scss
@@ -158,8 +158,13 @@
         width: 110px;
         height: 35px;
         line-height: 35px;
-        color: #FFFFFF;
+        color: #ffffff;
         background-color: rgb(248,101,1);
+
+        input[type="submit"] {
+          all: unset!important;
+        }
+
       }
     }
   }
