--- a/src/page/register/style/main.scss
+++ b/src/page/register/style/main.scss
@@ -111,7 +111,7 @@ body {
       width: 100%;
       height: 100%;
       border-radius: 10px;
-      box-shadow: 0 0 20px 0 #FFFFFf;
+      box-shadow: 0 0 20px 0 #ffffff;
       display: flex;
       justify-content: space-around;
       align-items: center;
@@ -173,6 +173,41 @@ body {
 
       }
 
+      &.register-result {
+        color: #ffffff;
+        height: 35%;
+
+        .register-result-title {
+
+          .copy {
+            cursor: pointer;
+            img {
+              width: 25px;
+              position: relative;
+              top: 5px;
+              left: 5px;
+            }
+          }
+        }
+
+        .btn-group {
+          .btn-in-register-result {
+            width: 200px;
+            display: block;
+
+            a {
+              all: unset;
+              display: flex;
+              justify-content: center;
+              align-items: center;
+              width: 100%;
+              height: 100%;
+            }
+
+          }
+        }
+      }
+
       .register-form-input {
         position: relative;
 
@@ -188,13 +223,13 @@ body {
           width: 40px;
           left: 0;
           bottom: 5px;
-          fill: #FFFFFf;
+          fill: #ffffff;
           transition: fill .5s;
         }
 
         input {
           all: unset;
-          border-bottom: 2px solid #FFFFFF;
+          border-bottom: 2px solid #ffffff;
           transition: border-color .5s;
           width: 300px;
           padding-bottom: 10px;
@@ -216,7 +251,7 @@ body {
         label {
           position: absolute;
           width: 300px;
-          color: #FFFFFF;
+          color: #ffffff;
           bottom: 10px;
           left: 45px;
           font-size: 18px;
@@ -271,7 +306,7 @@ body {
           justify-content: center;
           align-items: center;
           &:hover {
-            color: #FFFFFF;
+            color: #ffffff;
           }
         }
 
@@ -296,14 +331,14 @@ body {
 
           svg {
             width: 40px;
-            fill: #FFFFFf;
+            fill: #ffffff;
             transition: fill .5s;
           }
 
           .avatar-title {
             position: absolute;
             left: 15%;
-            color: #FFFFFf;
+            color: #ffffff;
             font-size: 18px;
             transition: color .5s;
           }
@@ -321,7 +356,7 @@ body {
           }
 
           label {
-            border: 3px dashed #FFFFFf;
+            border: 3px dashed #ffffff;
             display: flex;
             justify-content: center;
             align-items: center;
@@ -337,7 +372,7 @@ body {
 
           .avatar-tips {
             font-size: 12px;
-            color: #FFFFFf;
+            color: #ffffff;
             width: 65px;
             word-break: break-word;
           }
