--- a/src/page/video/style/main.scss
+++ b/src/page/video/style/main.scss
@@ -67,7 +67,7 @@ html {
           width: 70px;
           height: 30px;
           background-color: #010101;
-          color: #FFFFFF;
+          color: #ffffff;
           border-top-left-radius: 20px;
           border-bottom-left-radius: 20px;
           display: flex;
@@ -95,7 +95,7 @@ html {
           justify-content: center;
           align-items: center;
           height: 30px;
-          color: #FFFFFf;
+          color: #ffffff;
           font-weight: bold;
         }
 
