目前代码为上线代码。

--- a/src/component/login/index.html
+++ b/src/component/login/index.html
@@ -62,7 +62,7 @@
       </div>
     </div>
     <div class="register-link">
-      <a href="http://localhost:8899/html/register.html">还没有账号? 点击前往注册!</a>
+      <a href="<%= `${process.env.STATIC_SERVER}/html/register.html` %>">还没有账号? 点击前往注册!</a>
     </div>
   </div>
 </div>
